feat: renomeia e atualiza a estrutura do caso de uso de verificação de saúde da API
